# pve-tools

./: .gitignore  Cargo.toml  README.md
crates/proxmox-api/: Cargo.toml
crates/proxmox-api/src/: error.rs  lib.rs
crates/proxmox-api/src/api/: access.rs  backup.rs  ceph.rs  cluster.rs  console.rs  firewall.rs  ha.rs  lxc.rs  mod.rs  network.rs  nodes.rs  pools.rs  qemu.rs  replication.rs  storage.rs  version.rs
crates/proxmox-api/src/client/: auth.rs  config.rs  http.rs  mod.rs  retry.rs
crates/proxmox-api/src/model/: cluster.rs  firewall.rs  ha.rs  mod.rs  node.rs  storage.rs  vm.rs
tools/pve-agent/: Cargo.toml
tools/pve-agent/src/: cli.rs  main.rs
tools/pve-tui/: Cargo.toml
tools/pve-tui/src/: app.rs  main.rs  ui.rs
