[package]
name = "proxmox-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
url.workspace = true
rustls.workspace = true
toml.workspace = true