[package]
name = "pve-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
proxmox-api = { path = "../../crates/proxmox-api" }
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ctrlc = "3"